# conveniencer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  indexes.js  pyproject.toml  requirements.txt
src/conveniencer/: config.py  filters.py  main.py
src/conveniencer/database/: __init__.py  documents.py  entities.py  errors.py  processor.py
src/conveniencer/filters/: document_type.py  link.py
src/conveniencer/handlers/: __init__.py  callback_data.py  callbacks.py  commands.py  keyboards.py
src/conveniencer/handlers/callback_queries/: __init__.py  archive.py  back.py  book.py  categories.py  link.py  photo.py  states.py
src/conveniencer/handlers/commands/: __init__.py  categories.py  commands.py  help.py  start.py  utils.py
